--- a/FinPlan.Web/Components/ExportButton.razor
+++ b/FinPlan.Web/Components/ExportButton.razor
@@ -1,5 +1,6 @@
 @inject IExcelExportService ExcelService
 @inject IJSRuntime JSRuntime
+@using FinPlan.Shared
 @using FinPlan.Web.Services
 @using FinPlan.Web.Models
 
