--- a/FinPlan.Web/Components/Pages/SavingsPlanner.razor
+++ b/FinPlan.Web/Components/Pages/SavingsPlanner.razor
@@ -1,5 +1,6 @@
 @page "/savings-planner"
 @using System.ComponentModel.DataAnnotations
+@using FinPlan.Shared
 @using FinPlan.Web.Components
 @using FinPlan.Web.Services
 @using FinPlan.Web.Models
